[package]
name = "hu-program"
version = "0.1.0"
edition = "2018"
license = "WTFPL"
publish = false

[dependencies]
borsh = "0.9.1"
borsh-derive = "0.9.1"
solana-program = "1.8.1"
num-traits = "0.2"
num-derive = "0.3"
thiserror = "1.0.30"

[features]
test-bpf = []

[dev-dependencies]
assert_matches = "1.5.0"
solana-program-test = "1.8.1"
solana-sdk = "1.8.1"

[lib]
crate-type = ["cdylib", "lib"]
